# news_recommender

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/news_recommender/data_ingestion/: fetch_articles.py
tests/data_ingestion/: test_fetch_articles.py
